--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,4 +10,5 @@ dev_dependencies:
     git:
       url: https://github.com/ekweible/dart_codecov_generator.git
       ref: 0.3.0
+  dart_style: '>=0.1.8 <0.2.0'
   test: '0.12.2'
