--- a/smithy.yaml
+++ b/smithy.yaml
@@ -5,3 +5,5 @@ runner_image: docker.webfilings.org/devops/smithy-runner-dart1.10:3.1.0
 
 script:
   - xvfb-run -s '-screen 0 1024x768x24' ./tool/test.sh
+  - ./tool/analyze.sh
+  - ./tool/dartfmt.sh -e
