--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dev_dependencies:
   coverage: "^0.7.2"
   dart_dev: "^1.0.0"
   dart_style: "^0.2.0"
+  dartdoc: "^0.8.0"
   test: "^0.12.3+2"
 environment:
   sdk: ">=1.9.0 <2.0.0"
