changes for dart-sdk update

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: dart
 dart:
   - stable
 script:
+  - pub get --packages-dir
   - pub run dart_dev analyze
   - pub run dart_dev format --check
   - pub run dart_dev test
