--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,3 +19,8 @@ dev_dependencies:
   test: "^0.12.3+2"
 environment:
   sdk: ">=1.9.0 <2.0.0"
+transformers:
+- $dart2js:
+    sourceMaps: true
+    csp: true
+    minify: true
