--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,15 +19,15 @@ dev_dependencies:
   browser: "^0.10.0"
   coverage: "^0.7.3"
   dart_dev: "^1.0.0"
-  dart_style: "^0.2.0"
-  dartdoc: "^0.8.0"
+  dart_style: ^1.0.6
+  dartdoc: ^0.12.0
   dependency_validator: ^1.1.0
   semver_audit:
     hosted:
       name: semver_audit
       url: https://pub.workiva.org
-    version: ^1.0.2
-  test: "^0.12.3+2"
+    version: ^1.0.0
+  test: ^0.12.32+1
 environment:
   sdk: ">=1.24.2 <2.0.0"
 transformers:
