--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,19 +8,17 @@ authors:
   - Trent Grover <trent.grover@workiva.com>
 homepage: https://github.com/Workiva/state_machine
 
-dependencies:
-  w_common: ^1.2.0
-dev_dependencies:
-  browser: "^0.10.0"
-  coverage: "^0.7.3"
-  dart_dev: "^1.0.0"
-  dart_style: "^0.2.0"
-  dartdoc: "^0.8.0"
-  test: "^0.12.3+2"
 environment:
-  sdk: ">=1.24.2 <2.0.0"
-transformers:
-- $dart2js:
-    sourceMaps: true
-    csp: true
-    minify: true
+  sdk: '>=1.24.3<3.0.0'
+
+dependencies:
+  w_common: ^1.15.0
+
+dev_dependencies:
+  build_runner: ">=0.6.0 <1.0.0"
+  build_test: ">=0.9.0 <1.0.0"
+  build_web_compilers: ">=0.2.0 <1.0.0"
+  coverage: ">=0.10.0 <0.13.0"
+  dart_dev: ">=1.9.6 <3.0.0"
+  dart_style: ^1.0.0
+  test: ">=0.12.30 <2.0.0"
