--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ script:
   - pub get
   - pub run dart_dev analyze
   - pub run dart_dev format --check
-  - pub run dart_dev test
+  - pub run dart_dev test -p vm -p chrome
+  - pub run dart_dev test --release -p chrome
