--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,15 @@ authors:
 homepage: https://github.com/Workiva/state_machine
 
 environment:
-  sdk: '>=1.24.3 <3.0.0'
+  sdk: '>=2.4.0 <3.0.0'
 
 dependencies:
   w_common: ^1.15.0
 
 dev_dependencies:
-  build_runner: ">=0.6.0 <2.0.0"
-  build_test: ">=0.9.0 <2.0.0"
-  build_web_compilers: ">=0.2.0 <3.0.0"
-  coverage: ">=0.10.0 <0.13.0"
-  dart_dev: ^2.0.0
-  dart_style: ^1.0.0
-  test: ">=0.12.30 <2.0.0"
+  build_runner: ^1.7.1
+  build_test: ^0.10.9
+  build_web_compilers: ^2.5.1
+  dart_dev: ^3.0.0
+  dart_style: ^1.3.1
+  test: ^1.9.1
