simplify includes, run tests without release flag, remove default path

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ jobs:
       script:
         - pub run dart_dev analyze
         - pub run dart_dev format --check
+        - pub run dart_dev test
         - pub run dart_dev test --release
     - dart: dev
       name: "SDK: dev"
