--- a/build.yaml
+++ b/build.yaml
@@ -4,11 +4,11 @@ targets:
       build_vm_compilers|entrypoint:
         generate_for:
           include:
-            - "test/**.dart.vm_test.dart"
+            - "test/**.vm_test.dart"
       build_web_compilers|entrypoint:
         generate_for:
           include:
-            - "test/**.dart.browser_test.dart"
+            - "test/**.browser_test.dart"
             - "example/**.dart"
         release_options:
           dart2js_args:
