--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,6 @@ dev_dependencies:
   build_test: ^0.10.9
   build_web_compilers: ^2.5.1
   build_vm_compilers: ^1.0.3
-  dart_dev: ^3.0.0-alpha
+  dart_dev: ^3.0.0
   dart_style: ^1.3.1
   test: ^1.9.1
