--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: state_machine
-version: 2.0.5
-description: Finite state machine library. Easily define legal state transitions. Listen to state entrances, departures, and transitions.
+version: 2.0.6
+description: Finite state machine library. Easily define legal state transitions.
+    Listen to state entrances, departures, and transitions.
 authors:
   - Workiva Client Platform Team <clientplatform@workiva.com>
   - Evan Weible <evan.weible@workiva.com>
@@ -9,16 +10,16 @@ authors:
 homepage: https://github.com/Workiva/state_machine
 
 environment:
-  sdk: '>=2.4.0 <3.0.0'
+    sdk: '>=2.4.0 <3.0.0'
 
 dependencies:
-  w_common: ^1.20.1
+    w_common: ^1.20.1
 
 dev_dependencies:
-  build_runner: ^1.7.1
-  build_test: ^0.10.9
-  build_web_compilers: ^2.5.1
-  build_vm_compilers: ^1.0.3
-  dart_dev: ^3.0.0
-  dart_style: ^1.3.1
-  test: ^1.9.1
+    build_runner: ^1.7.1
+    build_test: ^0.10.9
+    build_web_compilers: ^2.5.1
+    build_vm_compilers: ^1.0.3
+    dart_dev: ^3.0.0
+    dart_style: ^1.3.1
+    test: ^1.9.1
