--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,13 +16,19 @@ dependencies:
     w_common:
         git:
             url: git@github.com:Workiva/w_common.git
-            ref: flutter-fix
+            ref: w-common-flutter-fix-new
 
 dev_dependencies:
     build_runner: ^1.7.1
-    build_test: ^0.10.9
+    build_test: ^2.0.0
     build_web_compilers: ^2.5.1
     build_vm_compilers: ^1.0.3
-    dart_dev: ^3.0.0
+    dart_dev:
+      git:
+        url: git@github.com:hunterbreathat-wk/dart_dev.git
+        ref: flutter-fix
     dart_style: ^1.3.1
     test: ^1.9.1
+
+dependency_overrides:
+  build: ^1.0.0
