--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,8 @@ dev_dependencies:
     build_vm_compilers: ^1.0.3
     dart_dev:
       git:
-        url: git@github.com:hunterbreathat-wk/dart_dev.git
-        ref: flutter-fix
+        url: git@github.com:kyleferguson-wk/dart_dev.git
+        ref: master
     dart_style: ^1.3.1
     test: ^1.9.1
 
