--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,8 @@ dependencies:
 
 dev_dependencies:
     build_runner: ^1.7.1
-    build_test: ^0.10.9
+    build_test: ">=0.10.9 <2.0.0"
     build_web_compilers: ^2.5.1
-    build_vm_compilers: ^1.0.3
     dart_dev: ^3.0.0
     dart_style: ^1.3.1
-    test: ^1.9.1
+    test: ^1.15.7
