--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ authors:
 homepage: https://github.com/Workiva/state_machine
 
 environment:
-    sdk: '>=2.4.0 <3.0.0'
+    sdk: ">=2.11.0 <3.0.0"
 
 dependencies:
     w_common: ^1.20.1
