--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     w_common: ^1.20.1
 
 dev_dependencies:
-    build_runner: ^1.7.1
+    build_runner: '>=1.7.1 <3.0.0'
     build_test: ">=0.10.9 <2.0.0"
     build_web_compilers: ^2.5.1
     dart_dev: ^3.0.0
