--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,5 +15,5 @@ dev_dependencies:
     build_test: ">=0.10.9 <2.0.0"
     build_web_compilers: ^2.5.1
     dart_dev: ^3.0.0
-    dart_style: ^1.3.1
+    dart_style: '>=1.3.1 <3.0.0'
     test: ^1.15.7
