--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,12 @@ environment:
     sdk: ">=2.11.0 <3.0.0"
 
 dependencies:
-    w_common: ^1.20.1
+    w_common: '>=1.21.8 <3.0.0'
 
 dev_dependencies:
-    build_runner: '>=1.7.1 <3.0.0'
-    build_test: ">=0.10.9 <2.0.0"
-    build_web_compilers: ^2.5.1
-    dart_dev: ^3.0.0
-    dart_style: '>=1.3.1 <3.0.0'
-    test: ^1.15.7
+    build_runner: ^2.1.2
+    build_test: ^2.1.3
+    build_web_compilers: ^3.0.0
+    dart_dev: ^3.8.7
+    dart_style: ^2.1.1
+    test: ^1.17.12
