--- a/.github/workflows/dart_ci.yaml
+++ b/.github/workflows/dart_ci.yaml
@@ -27,7 +27,5 @@ jobs:
         if: ${{ matrix.sdk == 'stable' }}
       - name: Analyze project source
         run: dart analyze
-      - name: Run tests (DDC)
-        run: dart run dart_dev test
-      - name: Run tests (dart2js)
-        run: dart run dart_dev test --release
+      - name: Run tests
+        run: dart test
