--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
     sdk: ">=2.11.0 <3.0.0"
 
 dependencies:
-    w_common: '>=1.21.8 <3.0.0'
+  w_common: '^2.0.0'
 
 dev_dependencies:
     dart_dev: ^3.8.7
