--- a/.github/workflows/dart_ci.yaml
+++ b/.github/workflows/dart_ci.yaml
@@ -25,7 +25,7 @@ jobs:
         run: dart pub get
       - name: Check formatting
         run: dart run dart_dev format --check
-        if: ${{ matrix.sdk == 'stable' }}
+        if: ${{ matrix.sdk == '2.18.7' }}
       - name: Analyze project source
         run: dart analyze
       - name: Run tests
