--- a/.github/workflows/dart_ci.yaml
+++ b/.github/workflows/dart_ci.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: dart pub get
       - name: Check formatting
-        run: dart run dart_dev format --check
+        run: dart format --set-exit-if-changed .
         if: ${{ matrix.sdk == '2.18.7' }}
       - name: Analyze project source
         run: dart analyze
