--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   w_common: '^2.0.0'
 
 dev_dependencies:
-    dart_dev: ^3.8.7
+    build_runner:
+    build_web_compilers: 
     dart_style: ^2.1.1
     test: ^1.17.12
