--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   w_common: '^2.0.0'
 
 dev_dependencies:
-    build_runner:
-    build_web_compilers: 
+    build_runner: '>=1.6.2 <3.0.0'
+    build_web_compilers: ^3.2.7
     dart_style: ^2.1.1
     test: ^1.17.12
