--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,6 @@ dependencies:
 
 dev_dependencies:
     build_runner: '>=1.6.2 <3.0.0'
-    build_web_compilers: ^2.0.0
+    build_web_compilers: '>=2.0.0 <4.0.0'
     dart_style: ^2.1.1
     test: ^1.17.12
