--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
     sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  w_common: '>=2.0.0 <4.0.0'
+  w_common: ^3.0.0
 
 dev_dependencies:
     build_runner: ^2.0.0
